[gd_scene load_steps=3 format=3 uid="uid://im0mrjcex3cf"]

[ext_resource type="Texture2D" uid="uid://bgk4mnorc1p4h" path="res://icon.png" id="1_6dwcs"]
[ext_resource type="Script" path="res://Scenes/UI/Interface/Modals/GameOver.gd" id="1_65k56"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_65k56")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -138.5
offset_right = 192.0
offset_bottom = 138.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
offset_right = 384.0
offset_bottom = 89.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
offset_right = 384.0
offset_bottom = 42.0
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer"]
offset_top = 46.0
offset_right = 384.0
offset_bottom = 89.0
size_flags_vertical = 3
text = "You blacked out"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
offset_top = 93.0
offset_right = 384.0
offset_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
offset_right = 384.0
offset_bottom = 90.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer2"]
offset_right = 384.0
offset_bottom = 20.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.454902, 0.596078, 0.984314, 1)
theme_override_colors/font_shadow_color = Color(0, 0.243137, 0.305882, 1)
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 2
uppercase = true

[node name="Stats" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer2"]
offset_top = 24.0
offset_right = 384.0
offset_bottom = 90.0
size_flags_vertical = 3
alignment = 1

[node name="FlexContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer2/Stats"]
offset_left = 138.0
offset_right = 177.0
offset_bottom = 66.0

[node name="FlexLabel" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer2/Stats/FlexContainer"]
offset_right = 39.0
offset_bottom = 18.0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 14
text = "Flex"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Flex" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer2/Stats/FlexContainer"]
offset_top = 22.0
offset_right = 39.0
offset_bottom = 66.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.843137, 0.560784, 0.788235, 1)
theme_override_colors/font_shadow_color = Color(0.360784, 0.14902, 0.341176, 1)
text = "15000"
horizontal_alignment = 1

[node name="Currency" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer2/Stats"]
offset_left = 181.0
offset_right = 246.0
offset_bottom = 66.0

[node name="CurrencyLabel" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer2/Stats/Currency"]
offset_right = 65.0
offset_bottom = 18.0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 14
text = "Currency
"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Currency" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer2/Stats/Currency"]
offset_top = 22.0
offset_right = 65.0
offset_bottom = 66.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.933333, 0.870588, 0, 1)
theme_override_colors/font_shadow_color = Color(0.435294, 0.32549, 0.0862745, 1)
text = "15.50"
horizontal_alignment = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
offset_left = 160.0
offset_top = 187.0
offset_right = 224.0
offset_bottom = 277.0
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource("1_6dwcs")
stretch_mode = 3

[node name="Label" type="Label" parent="VBoxContainer/TextureButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.964706, 0.964706, 0.964706, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Never stop the madness"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_On_Restart_Pressed"]
